--- a/src/containers/pages/ThanksPage/ThanksPage.scss
+++ b/src/containers/pages/ThanksPage/ThanksPage.scss
@@ -47,6 +47,7 @@ $break-md: 1281px;
 
   .btn {
     display: inline-block;
+    vertical-align: middle;
     width: auto;
     margin-bottom: 20px;
     padding: 13px 20px;
